gcc/testsuite/rust/rustc/ui/parser/issue-33455.rs
use foo.bar; // { dg-error "" "" { target *-*-* } }

